# dressing-in-order_PC-client

./: .gitignore  CMakeLists.txt  GarmentPageWidget.cpp  GarmentPageWidget.h  GroupItem.cpp  GroupItem.h  LICENSE  ModelPageWidget.cpp  ModelPageWidget.h  README.md  SingleImageItem.cpp  SingleImageItem.h  buttonImg.qrc  configForCpp.json  mainwindow.cpp  mainwindow.h  pycaller.cpp  pycaller.h  util.cpp  util.h
dress-in-order/: configForPython.json  tryon.py
dress-in-order/datasets/: deepfashion_datasets.py
dress-in-order/models/: dior_base_model.py
dress-in-order/models/networks/: vgg.py
dress-in-order/tools/: download_deepfashion_from_google_drive.py
dress-in-order/utils/: pose_utils.py
